ags (3.7.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed broken API Reference Manual of libags_audio.so

ags (3.7.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* updated developer's doc chap10.xml to cover ags_fx_factory_create()
	* deprecated ags/audio/recall
	* deprecated ags/audio/ags_recall_ladspa.h and ags/audio/ags_recall_ladspa_run.h
	* deprecated ags/audio/ags_recall_dssi.h and ags/audio/ags_recall_dssi_run.h
	* deprecated ags/audio/ags_recall_lv2.h and ags/audio/ags_recall_lv2_run.h

ags (3.7.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor improvements

ags (3.7.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed config header mess
	* fixed effect processors on output e.g. in AgsLine

ags (3.7.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed test device

ags (3.7.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed meson optional build

ags (3.7.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed effect processors on output e.g. in AgsLine
	* improved ags_soundcard_util_adjust_delay_and_attack() to correct attack within AGS_SOUNDCARD_DEFAULT_PERIOD
	* improved ags_fx_factory.c to respect chained to output or input

ags (3.7.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* changed base key to lower of AgsPitchSampler and AgsFFPlayer
	* improved SF2 support to select nearest sample
	* improved SFZ support

ags (3.7.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed meson build

ags (3.7.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed libgsequencer gtk-doc

ags (3.7.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_fast_pitch_util.c to do loudness correction
	* minor improvements

ags (3.6.29)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]