@@ -53,24 +53,24 @@
     <xi:include href="xml/ags_hscale_box.xml"/>
     <xi:include href="xml/ags_scrolled_scale_box.xml"/>
     <xi:include href="xml/ags_ruler.xml"/>
-  </chapter>
+  </chapter>  
+
+  <index id="api-index-full">
+    <title>API Index</title>
+    <xi:include href="xml/api-index-full.xml"><xi:fallback /></xi:include>
+  </index>
   
+  <index id="api-index-deprecated" role="deprecated">
+    <title>Index of deprecated API</title>
+    <xi:include href="xml/api-index-deprecated.xml"><xi:fallback /></xi:include>
+  </index>
+  
+  <xi:include href="xml/annotation-glossary.xml"><xi:fallback /></xi:include>
+
   <part label="appendix">
-    <chapter id="object-tree">
-      <title>Object Hierarchy</title>
-      <xi:include href="xml/tree_index.sgml"/>
-    </chapter>
-
-    <index id="api-index-full">
-      <title>API Index</title>
-      <xi:include href="xml/api-index-full.xml"><xi:fallback /></xi:include>
-    </index>
-    <index id="deprecated-api-index" role="deprecated">
-      <title>Index of deprecated API</title>
-      <xi:include href="xml/api-index-deprecated.xml"><xi:fallback /></xi:include>
-    </index>
-
-    <xi:include href="xml/annotation-glossary.xml"><xi:fallback /></xi:include>
+    <title>Tree Index</title>
+    
+    <xi:include href="xml/tree_index.sgml"><xi:fallback /></xi:include>
   </part>
   
 </book>
