@@ -390,20 +390,23 @@
     </chapter>
 
   </part>
-  
-  <chapter id="object-tree">
-    <title>Object Hierarchy</title>
-    <xi:include href="xml/tree_index.sgml"/>
-  </chapter>
+
   <index id="api-index-full">
     <title>API Index</title>
     <xi:include href="xml/api-index-full.xml"><xi:fallback /></xi:include>
   </index>
-  <index id="deprecated-api-index" role="deprecated">
+  
+  <index id="api-index-deprecated" role="deprecated">
     <title>Index of deprecated API</title>
     <xi:include href="xml/api-index-deprecated.xml"><xi:fallback /></xi:include>
   </index>
-  <!-- enable this when you use gobject introspection annotations
+  
   <xi:include href="xml/annotation-glossary.xml"><xi:fallback /></xi:include>
-  -->
+
+  <part label="appendix">
+    <title>Tree Index</title>
+    
+    <xi:include href="xml/tree_index.sgml"><xi:fallback /></xi:include>
+  </part>
+
 </book>
