@@ -1,3 +1,8 @@
+ags (3.7.11)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved API reference and fixed namespace
+
 ags (3.7.10)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
